@startuml
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

' Zero or One	|o--
' Exactly One	||--
' Zero or Many	}o--
' One or Many	}|--

table( ZonasGeograficas ) {
    primary_key( codZonaGeografica ): INTEGER
    foreign_key( codInstalacaoAgricola ): INTEGER
    column( designacaoZonaGeografica ): VARCHAR
}

table( EstacoesMeteorologicas ) {
    primary_key( codEstacaoMeteorologica ): INTEGER
    foreign_key( codZonaGeografica ): INTEGER
}

table( Sensores ) {
    primary_key( idSensor ): INTEGER
    foreign_key(codTipoSensor): VARCHAR
    foreign_key( codEstacaoMeteorologica ): INTEGER
    column( valorReferencia ): INTEGER
}

table( TiposSensores ) {
    primary_key( codTipoSensor ): VARCHAR
}

table( Leituras ) {
    primary_key( codLeitura ): INTEGER
    foreign_key( idSensor ): INTEGER
    column( instanteLeitura ): DATE
    column( valorLido ): INTEGER
}

table( FatoresProducao ) {
    primary_key( codFatorProducao ): INTEGER
    column( tipoFatorProducao ): VARCHAR
    column( preco_kg ): FLOAT
    column( nomeComercial ): VARCHAR
    column( formulacao ): VARCHAR
}

table( Restricoes ) {
    primary_key( dataInicio ): DATE
    foreign_key(primary_key( codZonaGeografica )): INTEGER
    foreign_key(primary_key( codFatorProducao )): INTEGER
    column( dataFim ): DATE
}

table( AplicacaoFatorProducao ) {
    foreign_key(primary_key( codOperacao )): INTEGER
    foreign_key(primary_key( codFatorProducao )): INTEGER
    foreign_key(primary_key( codSetorAgricola )): INTEGER
    foreign_key(primary_key( codCultura )): INTEGER
    column( qtFatorProducao ): FLOAT
}

table( SetoresAgricolas ) {
    primary_key( codSetorAgricola ): INTEGER
    foreign_key( codZonaGeografica ): INTEGER
    foreign_key( codInstalacaoAgricola ): INTEGER
    column( designacaoSetorAgricola ): VARCHAR
    column( areaSetorAgricola ): INTEGER
}

table( Operacoes ) {
    primary_key( codOperacao ): INTEGER
    foreign_key( anoPlanoAnual ): INTEGER
    foreign_key( codCalendarioOperacoes ): INTEGER
    column( dataPrevistaPlano ): DATE
    column( dataOperacao ): DATE
    column( formaAplicacao ): VARCHAR
    column( estadoOperacao ): VARCHAR
}

table( Culturas ) {
    primary_key( codCultura ): INTEGER
    column( designacaoCultura ): VARCHAR
    column( tipoCultura ): VARCHAR
    column( objetivoCultura ): VARCHAR
    column( tempoCrescimento ): INTEGER
}

table( SetoresAgricolas_Culturas ) {
    foreign_key(primary_key( codSetorAgricola )): INTEGER
    foreign_key(primary_key( codCultura )): INTEGER
    primary_key( dataPlantacao ): DATE
}

table( PlanosAnuais ) {
    primary_key( anoPlanoAnual ): INTEGER
}

table( CalendariosOperacoes ) {
    primary_key( codCalendarioOperacoes ): INTEGER
    column( anoCalendarioOperacoes ): INTEGER

}

table( Regas ) {
    primary_key( codRega ): INTEGER
    foreign_key( codOperacao ): INTEGER
    column( tempoRega ): INTEGER
}

table( AplicacaoRegas ){
     foreign_key(primary_key( codRega )): INTEGER
     foreign_key(primary_key( codCultura )): INTEGER
     foreign_key(primary_key( codSetorAgricola )): INTEGER
     column( tipoRega ): VARCHAR
}

table( PlanosRega ) {
   foreign_key(primary_key( anoPlanoAnual )): INTEGER
   foreign_key( primary_key( codSetorAgricola )): INTEGER
   foreign_key(primary_key( codCultura )): INTEGER
   foreign_key(primary_key( codRega )): INTEGER
}

table( PlanosAnuais_SetoresAgricolas ){
    foreign_key(primary_key( anoPlanoAnual )): INTEGER
    foreign_key( primary_key( codSetorAgricola )): INTEGER
    column( ordemRega ): INTEGER
    column( periodicidadeRegaSetor ): INTEGER
}

table( Culturas_Regas ){
    foreign_key(primary_key( codCultura )): INTEGER
    foreign_key(primary_key( codRega )): INTEGER
    column( tipoDistribuicao ): VARCHAR
}

table( Colheitas ) {
    primary_key( codColheita ): INTEGER
    column( anoColheita ): INTEGER
}

table( SetoresAgricolas_Colheitas_Culturas ) {
    foreign_key(primary_key( codSetorAgricola )): INTEGER
    foreign_key(primary_key( codColheita )): INTEGER
    foreign_key(primary_key( codCultura )): INTEGER
    column( valorSetor ): FLOAT
}

table( Produtos ) {
    primary_key( codProduto ): INTEGER
    foreign_key( codCultura ): INTEGER
    'foreign_key( codColheita ): INTEGER
    column( preco/kg ): FLOAT
    column( stock/kg ): FLOAT
    column( designacaoProduto ): VARCHAR
}

table( Colheitas_Culturas ){
    foreign_key(primary_key( codColheita )): INTEGER
    foreign_key(primary_key( codCultura )): INTEGER
    column( valorTotalColheita ): FLOAT
}

table( Pedidos_Produtos ) {
    foreign_key(primary_key( codPedido )): INTEGER
    foreign_key( primary_key( codProduto )): INTEGER
    column( quantidadeProduto ): FLOAT
    column( precoPedido ): FLOAT
}

table( Pedidos ) {
    primary_key( codPedido ): INTEGER
    foreign_key( codInterno ): INTEGER
    column( valorTotal ): FLOAT
    column( dataPedido ): DATE
    column( dataVencimento ): DATE
}

table( Entregas ) {
    primary_key( codEntrega ): INTEGER
    foreign_key( codMorada ): INTEGER
    column( dataEntrega ): DATE
}

table( Incidentes ) {
    primary_key( codIncidente ): INTEGER
    foreign_key( codPedido ): INTEGER
    foreign_key( codInterno ): INTEGER
    foreign_key( codPagamento ): INTEGER
    column( dataOcorrencia ): DATE
}

table( Clientes ) {
    primary_key( codInterno ): INTEGER
    column( tipo ): VARCHAR
    column( nome ): VARCHAR
    column( emailCliente ): VARCHAR
    column( plafond ): FLOAT
    column( nrFiscal ): INTEGER
}

table( MoradasEntrega ) {
    foreign_key(primary_key( codInterno )): INTEGER
    foreign_key( primary_key( codMorada )): INTEGER
}

table( MoradasCorrespondencia ) {
    foreign_key(primary_key( codInterno )): INTEGER
    foreign_key( primary_key( codMorada )): INTEGER
}

table( Moradas ) {
    primary_key( codMorada ): INTEGER
    column( rua ): VARCHAR
    column( nrEdificio ): INTEGER
    column( andar ): INTEGER
    column( porta ): VARCHAR
    column( codPostal ): VARCHAR
    column( localidade ): VARCHAR
    column( pais ): VARCHAR
}

table( Niveis ) {
    primary_key( codNivel ): INTEGER
    column( designacaoNivel ): VARCHAR
}

table( Clientes_Niveis ) {
    foreign_key( primary_key( codInterno )): INTEGER
    foreign_key( primary_key( codNivel )): INTEGER
    column( dataAtribuicao ): DATE
}

table( Pagamentos ) {
    primary_key( codPagamento ): INTEGER
    column( dataPagamento ): DATE
}

table( Pedidos_Pagamentos_Entregas ) {
    foreign_key( primary_key( codPedido )): INTEGER
    foreign_key( primary_key( codPagamento )): INTEGER
    foreign_key( primary_key( codEntrega )): INTEGER
    column( estadoAtual ): VARCHAR
}

table( InstalacoesAgricolas ) {
    primary_key( codInstalacaoAgricola ): INTEGER
    foreign_key( codMorada ): INTEGER
    column( designacao ): VARCHAR
}

table( Edificios ) {
    primary_key( codEdificio ): INTEGER
    foreign_key( codInstalacaoAgricola ): INTEGER
    column( tipoEdificio ): VARCHAR
}

table( FichasTecnicas ) {
    primary_key( codFichaTecnica ): INTEGER
    foreign_key( codFatorProducao ): INTEGER
}

table( Componentes ) {
    primary_key( codComponente )
    column( substancia ):  VARCHAR
    column( categoria ): VARCHAR
}

table( FichasTecnicas_Componentes ){
    foreign_key( primary_key( codFichaTecnica )): INTEGER
    foreign_key( primary_key( codComponente )): INTEGER
    column( unidade ): VARCHAR
    column( quantidade ): INTEGER
}

table( Pista_Auditoria ){
    primary_key( cod_auditoria ): INTEGER
    column( user_id ): VARCHAR
    column( tipo_alteracao ): VARCHAR
    column( alteracao ): VARCHAR
    column( data_hora ): DATE
}

' cardinalidades
Clientes ||--o{ Incidentes
Clientes ||--o{ Pedidos
InstalacoesAgricolas ||--|{ Edificios
Clientes ||--|{ Clientes_Niveis
Clientes_Niveis }|--|| Niveis
InstalacoesAgricolas ||--|{ SetoresAgricolas
Culturas ||--|{ SetoresAgricolas_Culturas
SetoresAgricolas_Culturas }|--|| SetoresAgricolas
Pedidos ||--|{ Pedidos_Produtos
Pedidos_Produtos }|--|| Produtos
EstacoesMeteorologicas ||--|| ZonasGeograficas
EstacoesMeteorologicas ||--|{ Sensores
TiposSensores ||--|{ Sensores
Sensores ||--|{ Leituras
Pedidos ||--o| Incidentes
Moradas ||--o{ Entregas
Pedidos ||--|| Pedidos_Pagamentos_Entregas
Pagamentos |o--|| Pedidos_Pagamentos_Entregas
Entregas |o--|| Pedidos_Pagamentos_Entregas
Produtos }|--|| Culturas
Operacoes ||--|| Regas
CalendariosOperacoes ||--|{ Operacoes
FatoresProducao ||--o{ Restricoes
Restricoes }o--|| ZonasGeograficas
Incidentes |o--|| Pagamentos
SetoresAgricolas }|--|| ZonasGeograficas
PlanosAnuais ||--|{ Operacoes
FatoresProducao ||--|| AplicacaoFatorProducao
Culturas ||--|| AplicacaoFatorProducao
Operacoes ||--|| AplicacaoFatorProducao
SetoresAgricolas ||--|| AplicacaoFatorProducao
Moradas ||--|| MoradasEntrega
Clientes ||--|| MoradasEntrega
Moradas ||--|| MoradasCorrespondencia
Clientes ||--|| MoradasCorrespondencia
AplicacaoRegas ||--|| Culturas
AplicacaoRegas ||--|| SetoresAgricolas
AplicacaoRegas ||--|| Regas
PlanosAnuais ||--|{ PlanosAnuais_SetoresAgricolas
SetoresAgricolas ||--|{ PlanosAnuais_SetoresAgricolas
Culturas ||--|| Culturas_Regas
Regas ||--|| Culturas_Regas
PlanosRega ||--|{ Culturas_Regas
PlanosRega ||--|{ PlanosAnuais_SetoresAgricolas
SetoresAgricolas_Colheitas_Culturas ||--|| SetoresAgricolas
Colheitas_Culturas }|--|| Colheitas
Colheitas_Culturas ||--|| Culturas
Colheitas_Culturas ||--|{ SetoresAgricolas_Colheitas_Culturas
' Produtos }|--|| Colheitas_Culturas
InstalacoesAgricolas ||--|{ ZonasGeograficas
InstalacoesAgricolas ||--|| Moradas
FatoresProducao ||--|| FichasTecnicas
FichasTecnicas }|--|| FichasTecnicas_Componentes
Componentes }|--|| FichasTecnicas_Componentes

@enduml